Fix text centering in projects cards on mobile, text will now be left aligned. Change paragraph headers in  projects cards to h4 instead of h2. Added project card for portfolio.

--- a/styles/onepage.module.css
+++ b/styles/onepage.module.css
@@ -270,6 +270,11 @@
   flex-direction: column;
   align-items: center;
   padding: 1rem;
+  text-align: start;
+}
+
+.projectsContainer .cardBody h3 {
+  text-align: center;
 }
 
 .projectsContainer .btnContainer {
@@ -350,7 +355,7 @@
   }
   .projectsContainer .cardBody {
     width: 100%;
-    text-align: center;
+    text-align: start;
   }
   .projectsContainer .cardSkills {
     justify-content: center;
